# qml-slide-show

./: CMakeLists.txt  Main.qml  README.md  Themes.qml  application.qrc  main.cpp
components/: Carousel.qml  CodeSlide.qml  Footer.qml  GradientPage.qml  GradientSlide.qml  Header.qml  ImageSlide.qml  Page.qml  PageLoader.qml  Scrollbar.qml  Slide.qml  TextSlide.qml  TitlePage.qml  TitleSlide.qml
pages/: Page0.qml  Page1.qml  Page10.qml  Page11.qml  Page12.qml  Page13.qml  Page14.qml  Page15.qml  Page16.qml  Page17.qml  Page18.qml  Page19.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  Page6.qml  Page7.qml  Page8.qml  Page9.qml  Page99.qml
